More styling and adding another default setting

--- a/config/settings.html
+++ b/config/settings.html
@@ -71,8 +71,8 @@
       </td>
     </tr>
     <tr>
-      <th><label for="color_footer_bg">Header &amp; Footer Background</label></th>
-      <td colspan="2"><input id="color_footer_bg" name="color_footer_bg" class="color" type="text" value="#f2f2f2" /></td>
+      <th><label for="color_nav_bg">Header &amp; Footer Background</label></th>
+      <td colspan="2"><input id="color_nav_bg" name="color_nav_bg" class="color" type="text" value="#f2f2f2" /></td>
     </tr>
     <tr>
       <th><label for="color_footer_text">Header &amp; Footer Text</label></th>
